remove useless code from network_settings.sh